bug(ui): fix environment dropdown z-index (#7998)
* bug(ui): fix env dropdown z-index

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -203,6 +203,10 @@ body.auth {
   .environment-selector-toggle {
     color: @gray-darkest;
     font-weight: 600;
+
+    + .dropdown-menu {
+      z-index: @zindex-sticky-bar + 2;
+    }
   }
 
   .project-select {
